attempting to fix bgContianer images to stretch to full screen for mobile devices

--- a/assets/css/storyteller/storyteller.css
+++ b/assets/css/storyteller/storyteller.css
@@ -192,7 +192,7 @@ h2 {
     background-color: transparent;
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: cover;
+    /* background-size: cover;  sizing done with js now*/
     background-attachment: fixed;
     }
 
